reso una function crezione "article"

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <header>
         <select name="livelli" id="livelli">
-            <option id="medio" value="medio">medio</option>
-            <option id="difficile" value="difficile">facile</option>
-            <option id="facile" value="facile">difficile</option>
+            <option id="medio" value="1">medio</option>
+            <option id="facile" value="0">facile</option>
+            <option id="difficile" value="2">difficile</option>
         </select>
 
         <button class="play">Play</button>   
